# speech

./: .gitignore  README.md  Taskfile.yml  go.mod  go.sum  private.key  recorder.go  requirements.txt  setup.cfg  setup.py
cmd/client/: main.go
cmd/oscilloscope/: main.go
cmd/playback/: main.go
cmd/recorder/: record.go  root.go
cmd/server/: main.go
cmd/text2wav/: main.go
cmd/websocket/: main.go
files/etc/: webspeech.channels  webspeech.conf
go/: vosk.go
go/coqui/: coqui.go  coqui_wrap.h
go/mpg123/: mpg123.go
go/portmidi/: stream.go
go/wave/: chunks.go  reader.go  writer.go
internal/: main.go
internal/audio2wav/: main.go  sound_analyzer.py
internal/capture/: main.go
internal/espeak/: main.go
internal/espeak/web/: index.html  main.go
internal/g711dec/: main.go
internal/g711enc/: main.go
internal/mp3dump/: mp3dump.go
internal/playback/: main.go
internal/speaker/: main.go  main.py  repeatvoice.py
internal/transcribe/: main.go
internal/translate/: main.go
internal/wavreader/: main.go
internal/wavwriter/: main.go
misc/: LEDController.py  apa102.py  webradio_chrome.desktop
pkg/api/: Makefile  batch_model.cc  batch_model.h  batch_recognizer.cc  batch_recognizer.h  json.h  language_model.cc  language_model.h  model.cc  model.h  recognizer.cc  recognizer.h  spk_model.cc  spk_model.h  vosk_api.cc  vosk_api.h
pkg/coqui/: coqui-stt.h  coqui.cpp
pkg/engine/: Makefile  README.md  index.py  numpy.i  phash.c  phash.h  phash.i  phash.py  verify.py
pkg/espeak/: espeak.go  espeak_test.go  example_test.go
pkg/go/: vosk.go
pkg/language/: alphabet.go  builder.go  builder_test.go  confidence.go  constant.go  detector.go  detector_test.go  example_test.go  isocode.go  isocode639_1_string.go  isocode639_3_string.go  json.go  json_test.go  language.go  language_string.go  language_test.go  model.go  model_test.go  ngram.go  ngram_test.go  writer.go  writer_test.go
pkg/miniaudio/: constants.go  context.go  context_test.go  device.go  device_config.go  device_info.go  enumerations.go  errors.go  minialgo.h  miniaudio.c  miniaudio.go  miniaudio.h  miniaudio_test.go  sizes_test.go
pkg/mp3/: bench_test.go  decode.go  fuzzing_test.go  source.go
pkg/portaudio/: pa.c  portaudio.go
pkg/portmidi/: portmidi.go
pkg/server/: requirements.txt
pkg/synthesis/: tts.go  tts_test.go
pkg/utils/: array.go  doc.go  models.go  repo.go  utils.go
pkg/vosk/: vosk.go
pkg/wave/: reader.go  reader_test.go  test_helper.go  wave.go  writer.go  writer_test.go
python/: setup.py  vosk_builder.py
python/example/: test_alternatives.py  test_empty.py  test_ffmpeg.py  test_gpu_batch.py  test_microphone.py  test_nlsml.py  test_reset.py  test_simple.py  test_speaker.py  test_srt.py  test_text.py  test_webvtt.py  test_words.py
python/test/: transcribe_scp.py
python/vosk/: __init__.py
ssl/: cert.pem  generate-keys.sh
tools/: __init__.pyi  install-pirate-audio.sh  install-vosk.sh  install.sh  vosk-map.py  word_map_de.py  word_map_en.py
training/: Dockerfile  dict.py  docker-compose.yml  extra.dic  install_kaldi.sh  nonsilence_phones.txt  path.sh  requirements.txt
(+144 files in other folders)
